added employee and customer login pages

--- a/ehotel/src/main/webapp/WEB-INF/web.xml
+++ b/ehotel/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
   <display-name>E-Hotel Web Application</display-name>
   
   <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
