started servlets to handle login pages

--- a/ehotel/src/main/webapp/WEB-INF/web.xml
+++ b/ehotel/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/main/</url-pattern>
+        <url-pattern>/dbtest/</url-pattern>
     </servlet-mapping>
 
 </web-app>
